fixed a layout bug with search__bar on Lists view, and overflow issue on iphone 5/SE view

--- a/src/components/AddItem/AddItem.style.scss
+++ b/src/components/AddItem/AddItem.style.scss
@@ -171,6 +171,10 @@
 // iPhone 5/SE specific layout
 @media screen and (max-width: 320px) {
   // Overall page layout
+  html,
+  body {
+    overflow-x: hidden;
+  }
   .page {
     &__content {
       width: 100vw;
